Suite codage html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </div>
             <div class="col-10 offset-1 col-xl-10 offset-xl-1 nav-container">
               <nav>
-                <a href="#a-propos-de-nous">A propos de nous</a>
-                <a href="#dess-code">Dress code</a>
-                <a href="#la-carte">La carte</a>
-                <a href="#reservations">Reservations</a>
+                <a class="category" href="#a-propos-de-nous">A propos de nous</a>
+                <a class="category" href="#dess-code">Dress code</a>
+                <a class="category" href="#la-carte">La carte</a>
+                <a class="category" href="#reservations">Reservations</a>
               </nav>
             </div>
           </div>
@@ -33,142 +33,144 @@
       </div>
     </header>
     <main>
-      <div class="layout layout-2">
-        <div class="container">
-          <div class="row a-propos-de-nous-dress-code">
-            <div class="col-8 offset-1 col-xl-6 offset-xl-1">
-              <h2 id="a-propos-de-nous">
-                A propos de nous
-              </h2>
+      <div class="container">
+        <div class="row a-propos-de-nous-dress-code">
+          <div class="col-8 offset-1 col-xl-6 offset-xl-1">
+            <h2 id="a-propos-de-nous">
+              A propos de nous
+            </h2>
+            <p>
+              Le Charleston Club est bien plus qu'un simple jazz bar. Nous sommes une porte 
+              d'entrée vers l'âge d'or du jazz, une expérience immersive dans les Années Folles. 
+              Notre établissement allie élégance, musique en direct et cocktails artisanaux pour 
+              créer une atmosphère rétro inoubliable. Rejoignez-nous pour un voyage dans le temps 
+              et découvrez l'essence du jazz des années 20.
+            </p>
+          </div>
+          <div class="col-8 offset-3 col-xl-3 offset-xl-1 img-band">
+            <img class="img-initial" src="img/bande-musical-jazz.jpg" alt="Photographie d'une bande musicale de jazz">
+          </div>
+          <div class="col-8 offset-1 col-xl-3 offset-xl-1 img-woman-model">
+            <img class="img-initial" src="img/femme-model.jpg" alt="Image d'une femme qui pose">
+          </div>
+          <div class="col-8 offset-3 col-xl-6 offset-xl-1">
+            <h2 id="dess-code">
+              Dress code
+            </h2>
+            <p>
+              Bienvenue au Charleston Club, le joyau caché de l'ère des Années Folles, où le 
+              glamour, l'élégance et l'effervescence de cette décennie inoubliable sont célébrés 
+              à chaque instant. Notre restaurant vous plonge dans une époque révolue, où la 
+              sophistication et le style étaient à l'honneur. Pour profiter pleinement de votre 
+              expérience au Charleston Club, veuillez respecter notre dress code d'inspiration 
+              des années 1920, afin de vous fondre dans l'atmosphère envoûtante de cette époque exquise.
+            </p>
+            <div class="container-button-more-info">
+              <button class="button_more_info">
+                <a href="#"target="_blank">+infos</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div> 
+      <div class="container-carousel">
+        <div class="container-carousel-text carousel-left">
+          <p class="carousel-text-blur">La Carte</p>
+          <p class="carousel-text-blur">La Carte</p>
+          <p class="carousel-text-blur">La Carte</p>
+          <p class="carousel-text-blur">La Carte</p>
+          <p class="carousel-text-blur">La Carte</p>
+          <p class="carousel-text-blur">La Carte</p>
+        </div>
+        <div class="container-carousel-text carousel-right">
+          <p class="carousel-text">La Carte</p>
+          <p class="carousel-text">La Carte</p>
+          <p class="carousel-text">La Carte</p>
+          <p class="carousel-text">La Carte</p>
+          <p class="carousel-text">La Carte</p>
+          <p class="carousel-text">La Carte</p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="container-la-carte">
+          <div class="row">
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
               <p>
-                Le Charleston Club est bien plus qu'un simple jazz bar. Nous sommes une porte 
-                d'entrée vers l'âge d'or du jazz, une expérience immersive dans les Années Folles. 
-                Notre établissement allie élégance, musique en direct et cocktails artisanaux pour 
-                créer une atmosphère rétro inoubliable. Rejoignez-nous pour un voyage dans le temps 
-                et découvrez l'essence du jazz des années 20.
+                Découvrez une symphonie de saveurs et de cocktails exquis. Notre menu, inspiré des 
+                années 20, et nos boissons artisanales créent une expérience gastronomique unique 
+                qui se marie parfaitement avec l'ambiance rétro du Charleston Club.
               </p>
-            </div>
-            <div class="col-8 offset-3 col-xl-3 offset-xl-1 img-band">
-              <img src="img/bande-musical-jazz.jpg" alt="Photographie d'une bande musicale de jazz">
-            </div>
-            <div class="col-8 offset-1 col-xl-3 offset-xl-1 img-woman-model">
-              <img src="img/femme-model.jpg" alt="Image d'une femme qui pose">
-            </div>
-            <div class="col-8 offset-3 col-xl-6 offset-xl-1">
-              <h2 id="dess-code">
-                Dress code
-              </h2>
-              <p>
-                Bienvenue au Charleston Club, le joyau caché de l'ère des Années Folles, où le 
-                glamour, l'élégance et l'effervescence de cette décennie inoubliable sont célébrés 
-                à chaque instant. Notre restaurant vous plonge dans une époque révolue, où la 
-                sophistication et le style étaient à l'honneur. Pour profiter pleinement de votre 
-                expérience au Charleston Club, veuillez respecter notre dress code d'inspiration 
-                des années 1920, afin de vous fondre dans l'atmosphère envoûtante de cette époque exquise.
-              </p>
-              <div class="container-button-more-info">
-                <button class="button_more_info">
-                  +infos
-                </button>
-              </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-12 col-xl-12 carousel-text-blur">
-              <marquee id="la-carte">
-                La Carte La Carte La Carte La Carte La Carte La Carte La Carte 
-              </marquee>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1 img-section-la-carte">
+              <img class="la-carte-img" src="img/img-cocktails-restaurant.jpg" alt="Image avec des cocktails">
+              <p>
+                Cocktails
+              </p>
             </div>
-            <div class="col-12 col-xl-12 carousel-text">
-              <marquee>
-                La Carte La Carte La Carte La Carte La Carte La Carte La Carte 
-              </marquee>
-            </div>
-          </div>
-          <div class="container-la-carte">
-            <div class="row">
-              <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
-                <p>
-                  Découvrez une symphonie de saveurs et de cocktails exquis. Notre menu, inspiré des 
-                  années 20, et nos boissons artisanales créent une expérience gastronomique unique 
-                  qui se marie parfaitement avec l'ambiance rétro du Charleston Club.
-                </p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1 img-section-la-carte">
-                <img src="img/img-cocktails-restaurant.jpg" alt="Image avec des cocktails">
-              </div>
-              <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
-                <img src="img/img-snack.jpg" alt="Image de snacks">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
-                <p>
-                  Commencez votre soirée en douceur avec notre sélection de snacks délicieux, 
-                  parfaits pour accompagner les premières notes de musique. Ensuite, plongez dans 
-                  notre liste de cocktails classiques revisités et de boissons artisanales, 
-                  conçus pour satisfaire tous les palais. Que vous recherchiez des saveurs 
-                  audacieuses ou des classiques intemporels, notre carte saura éveiller vos 
-                  sens et vous plonger dans l'ambiance des Années Folles. Venez déguster l'âme 
-                  du Charleston Club à chaque bouchée et à chaque gorgée.
-                </p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1 img-section-la-carte">
-                <img src="img/salle-de-fete-restaurant-jazz.jpg" alt="Image d'une salle de restaurant avec un évènement">
-              </div>
-              <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
-                <img src="img/restaurant-table.jpg" alt="Image d'un coin d'un restaurant avec un table">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 container-button-reservation">
-                <button id="reservations" class="button_reservations">
-                  Réservations
-                </button>
-              </div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
+              <img class="la-carte-img" src="img/img-snack.jpg" alt="Image de snacks">
+              <p>
+                Snacks
+              </p>
             </div>
           </div>
-          <div class="row container-carousel-text">
-            <div class="col-12 col-sm-12 col-xl-12 carousel-text-blur">
-              <marquee>
-                Alors... ça reste entre nous ? Alors... ça reste entre nous ?
-              </marquee>  
-            </div>
-            <div class="col-12 col-sm-12 col-xl-12 carousel-text">
-              <marquee>
-                Alors... ça reste entre nous ? Alors... ça reste entre nous ?
-              </marquee>
+          <div class="row">
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
+              <p>
+                Commencez votre soirée en douceur avec notre sélection de snacks délicieux, 
+                parfaits pour accompagner les premières notes de musique. Ensuite, plongez dans 
+                notre liste de cocktails classiques revisités et de boissons artisanales, 
+                conçus pour satisfaire tous les palais. Que vous recherchiez des saveurs 
+                audacieuses ou des classiques intemporels, notre carte saura éveiller vos 
+                sens et vous plonger dans l'ambiance des Années Folles. Venez déguster l'âme 
+                du Charleston Club à chaque bouchée et à chaque gorgée.
+              </p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1 img-section-la-carte">
+              <img class="la-carte-img" src="img/salle-de-fete-restaurant-jazz.jpg" alt="Image d'une salle de restaurant avec un évènement">
+              <p>
+                Évènements
+              </p>
+            </div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
+              <img class="la-carte-img" src="img/restaurant-table.jpg" alt="Image d'un coin d'un restaurant avec un table">
+              <p>
+                Lieu
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 container-button-reservation">
+              <button id="reservations" class="button_reservations">
+                <a href="#"target="_blank">Réservations</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-carousel">
+        <div class="container-carousel-text carousel-left">
+          <p class="carousel-text-blur">Alors... ça reste entre nous ?</p>
+          <p class="carousel-text-blur">Alors... ça reste entre nous ?</p>
+          <p class="carousel-text-blur">Alors... ça reste entre nous ?</p>
+        </div>
+        <div class="container-carousel-text carousel-right">
+          <p class="carousel-text">Alors... ça reste entre nous ?</p>
+          <p class="carousel-text">Alors... ça reste entre nous ?</p>
+          <p class="carousel-text">Alors... ça reste entre nous ?</p>
         </div>
       </div>
     </main>
     <footer>
-      <div class="layout layout-3">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-sm-12 col-xl-6 footer-content">
-              <a href="e-mail">e-mail</a>
-            </div>
-            <div class="col-12 col-sm-12 col-xl-6 footer-content">
-              <a href="telephone">Téléphone</a>
-            </div>
-            <div class="col-12 col-sm-12 col-xl-4 footer-content">
-              <a href="twitter">Twitter</a>
-            </div>
-            <div class="col-12 col-sm-12 col-xl-4 footer-content">
-              <a href="instagram">Instagram</a>
-            </div>
-            <div class="col-12 col-sm-12 col-xl-4 footer-content">
-              <a href="facebook">Facebook</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <a href="e-mail" class="footer-content width">e-mail</a>
+      <a href="telephone" class="footer-content width">Téléphone</a>
+      <a href="twitter" class="footer-content">Twitter</a>
+      <a href="instagram" class="footer-content">Instagram</a>
+      <a href="facebook" class="footer-content">Facebook</a>
     </footer>
   </body>
 </html>
